[package]
name = "pixelart"
version = "0.1.0"
authors = ["Joe Tsoi <joetsoi@users.noreply.github.com>"]
edition = "2018"
default-run = "generateconf"

[dependencies]
ggez = "*"
cgmath = "*"

[[bin]]
name = "blurry"
path = "blurry/main.rs"

[[bin]]
name = "generateconf"
path = "generateconf/main.rs"

[[bin]]
name = "spritemove"
path = "spritemove/main.rs"

[[bin]]
name = "vsync"
path = "timestep/vsync/main.rs"

[[bin]]
name = "fixeddeltatime"
path = "timestep/fixeddeltatime/main.rs"

[[bin]]
name = "variabledeltatime"
path = "timestep/variabledeltatime/main.rs"

[[bin]]
name = "semifixedtimestep"
path = "timestep/semifixedtimestep/main.rs"

[[bin]]
name = "freethephysics"
path = "timestep/freethephysics/main.rs"

[[bin]]
name = "thefinaltouch"
path = "timestep/thefinaltouch/main.rs"
